# bazel-issue

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  package.json  pnpm-lock.yaml  tsconfig.json
.jetbrains/: main.bazelproject
tools/bazel/: deps.bzl  rules.bzl
tools/bazel/rc/: coverage.bazelrc
tools/jest/: BUILD.bazel  deps.bzl  jest.config.js  rules.bzl  snapshotResolver.js
tools/js/: deps.bzl  rules.bzl
tools/npm/: deps.bzl
tools/ts/: deps.bzl  rules.bzl
tools/ts/config/: BUILD.bazel  tsconfig.bazel.json  tsconfig.common.json  tsconfig.jest.json  tsconfig.node.json
